--- a/resources/public/css/compiled/screen.css
+++ b/resources/public/css/compiled/screen.css
@@ -116,3 +116,64 @@ select:invalid {
   }
 
 }
+
+.horizon {
+  border-bottom: solid 1px #000;
+  overflow: hidden;
+  position: relative;
+}
+
+.horizon canvas {
+  display: block;
+}
+
+.horizon .title, .horizon .value {
+  bottom: 0;
+  line-height: 30px;
+  margin: 0 6px;
+  position: absolute;
+  text-shadow: 0 1px 0 rgba(255,255,255,.5);
+  white-space: nowrap;
+}
+
+.horizon .title {
+  left: 0;
+}
+
+.horizon .value {
+  right: 0;
+}
+
+.horizon .line {
+  background: #000;
+  z-index: 2;
+}
+
+.rule {
+  z-index: 3;
+}
+
+.axis {
+  font: 10px sans-serif;
+  pointer-events: none;
+  z-index: 2;
+}
+
+.axis text {
+  -webkit-transition: fill-opacity 20ms linear;
+}
+
+.axis path {
+  display: none;
+}
+
+.axis line {
+  stroke: 000;
+  shape-rendering: crispEdges;
+}
+
+.line {
+  background: #000;
+  opacity: .2;
+  z-index: 2;
+}
